--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.firebaseui:firebase-ui-database:8.0.2'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
 }
